[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Guilherme <sitegui@sitegui.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"

[[bin]]
name = "day-1"
path = "src/day-1.rs"

[[bin]]
name = "day-2"
path = "src/day-2.rs"

[[bin]]
name = "day-3"
path = "src/day-3.rs"